kustomize/rest-fights/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"fights-db"},{"apiVersion":"apps/v1","kind":"Deployment","name":"rest-villains"},{"apiVersion":"apps/v1","kind":"Deployment","name":"rest-heroes"},{"apiVersion":"kafka.strimzi.io/v1beta2","kind":"Kafka","name":"fights-kafka"},{"apiVersion":"apps/v1","kind":"Deployment","name":"apicurio"},{"apiVersion":"opentelemetry.io/v1alpha1","kind":"OpenTelemetryCollector","name":"otel-collector"}]'
    app.openshift.io/vcs-ref: rhbq-3.2
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2023-02-24 - 13:05:29 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8082"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: java17-latest-3.2.Final
    app: rest-fights
    application: fights-service
    system: quarkus-super-heroes
    app.openshift.io/runtime: quarkus
  name: rest-fights
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/part-of: fights-service
      app.kubernetes.io/name: rest-fights
      app.kubernetes.io/version: java17-latest-3.2.Final
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-ref: rhbq-3.2
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/build-timestamp: 2023-02-24 - 13:05:29 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8082"
        prometheus.io/scheme: http
      labels:
        app: rest-fights
        application: fights-service
        system: quarkus-super-heroes
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/part-of: fights-service
        app.kubernetes.io/name: rest-fights
        app.kubernetes.io/version: java17-latest-3.2.Final
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/quarkus-super-heroes/rest-fights:java17-latest-3.2.Final
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-fights
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 768Mi
            requests:
              memory: 256Mi
